Fix UI issues on IE and Chrome

--- a/sass/plugins/charitable/_charitable-forms.scss
+++ b/sass/plugins/charitable/_charitable-forms.scss
@@ -59,8 +59,7 @@
         }
 
         .charitable-form-header {
-            position: relative;
-            float: left;        
+            position: relative;      
             clear: both;
             @include left( 24 );
             margin: 0;
